Added live previev of the :japanese_ogre: :japanese_ogre: :japanese_ogre: